--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.258.0",
     "next-themes": "^0.2.1",
@@ -27,7 +31,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
