--- a/_settings.json
+++ b/_settings.json
@@ -1,1 +1,1 @@
-{"dataPath":"data","theme":"dark"}
+{"dataPath":"data","theme":"dark","currentBoard":"cm172gqcb000038vnxe65e6b5/boards/cm172gqcb000138vnisks51jz.json"}
